legend encapsulation ongoing

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="dist/Leaflet.markercluster/MarkerCluster.css" />
     <link rel="stylesheet" href="dist/Leaflet.markercluster/MarkerCluster.Default.css" />
 	<link rel="stylesheet" href="dist/bootstrap-3.3.6-dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/jquery-ui.css" />
-	<link rel="stylesheet" href="css/legend.css" />
+	<link rel="stylesheet" href="dist/jquery-ui/jquery-ui.css" />
+	<link rel="stylesheet" href="css/maplegend.css" />
 	<link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
@@ -55,22 +55,23 @@
 	</div>
     <div id="pxMmTest" style="height:1mm;display:none"></div>
 	
-	<script src="js/jquery-1.11.3.min.js" ></script>
-	<script src="js/jquery-ui.min.js" ></script>
+	<script src="libs/jquery-1.11.3.min.js" ></script>
+	<script src="dist/jquery-ui/jquery-ui.min.js" ></script>
     <script src="dist/leaflet/leaflet.js"></script>
     <script src="dist/Leaflet.markercluster/leaflet.markercluster.js"></script>
 	<script src="dist/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-	<script src="js/bootstrap3-typeahead.min.js"></script>
+	<script src="libs/bootstrap3-typeahead.min.js"></script>
 	<script src="js/utils.js"></script>
 	<script src="js/config.js"></script>
-	<script src="js/papaparse.min.js"></script>
-	<script src="js/html2canvas.min.js"></script>	
-	<script src="js/jspdf.min.js"></script>
-	<script src="js/Chart.min.js"></script>
-	<script src="js/sweetalert2.all.min.js"></script>
+	<script src="libs/papaparse.min.js"></script>
+	<script src="libs/html2canvas.min.js"></script>	
+	<script src="libs/jspdf.min.js"></script>
+	<script src="libs/Chart.min.js"></script>
+	<script src="libs/sweetalert2.all.min.js"></script>
 	<script src="js/leaflet_print/L.CanvasPointLayer.js"></script>
 	<script src="js/leaflet_print/L.GetImage.js"></script>
 	<script src="js/exportPDF.js"></script>
+	<script src="js/mapLegend.js"></script>
 	<script src="js/fsmt_testPapaparse.js"></script>
 
 </body>
