--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 	<script src="js/leaflet_print/L.GetImage.js"></script>
 	<script src="js/exportPDF.js"></script>
 	<script src="js/mapLegend.js"></script>
-	<script src="js/fsmt_testPapaparse.js"></script>
+	<script src="js/displayInfos.js"></script>
+	<script src="js/site.js"></script>
 
 </body>
 </html>
