--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <!-- modalMask : Used to hide the page while resizing elements for exportPDF -->
         <div id="modalMask" class="modal fade" style="opacity:1;background-color:white;"  role="dialog"  tabindex="-1">
-            <div id="modal-dialog-table" class="modal-dialog">
+            <div id="modalMask-dialog-table" class="modal-dialog">
                 <div id="modal-body-table">
                     <div class="row"><div class="col-md-12" style="text-align:center"><h2>Getting your document ready...</h2></div></div>
                 </div>				  
