--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="dist/Leaflet.markercluster/MarkerCluster.css" />
         <link rel="stylesheet" href="dist/Leaflet.markercluster/MarkerCluster.Default.css" />
         <link rel="stylesheet" href="dist/bootstrap-3.3.6-dist/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="css/maplegend.css" />
+        <link rel="stylesheet" href="css/mapLegend.css" />
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
