splitted sources calls

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Somalia - OPSMAP</title>
+        <title></title>
         <link rel="shortcut icon" href="img/favicon.ico" type="img/favicon.ico">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -19,11 +19,11 @@
                     <div class="row">
                         <h3><img src="img/logo_cccm.png" height="39"></h3>
                         <h3 style="color:red">WORK IN PROGRESS</h3>
-                        <h3 id="appTitle">Somalia - OPSMAP</h3>
-                        <h3><input type="text" class="form-control typeahead" placeholder="Search site ..." data-provide="typeahead"></h3>
+                        <h3 id="appTitle"></h3>
+                        <h3><input type="text" class="form-control typeahead" placeholder="Search site ..." data-provide="typeahead" style="display:none"></h3>
                     </div>
                     <div class="row">
-                        <div id="left_of_map">Search for a site or select one in the map to start. </div>
+                        <div id="left_of_map" style="display:none">Search for a site or select one in the map to start. </div>
                     </div>
                 </div>
                 <div class="col-md-8">
